--- a/archive.html
+++ b/archive.html
@@ -6,27 +6,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/bootstrap.css">
+  <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+  <nav class="navbar navbar-toggleable-md navbar-light">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <a class="navbar-brand" href="index.html">轻主题</a>
-    <div class="collapse navbar-collapse" id="navbarNavDropdown">
-      <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="category.html">分类</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="single.html">文章</a>
-        </li>
-      </ul>
+    <div class="container">
+      <a class="navbar-brand" href="index.html">轻主题</a>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="category.html">分类</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="category2.html">图片列表</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="single.html">文章</a>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0 float-right">
+          <input class="form-control mr-sm-2" type="text" placeholder="输入关键字">
+          <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">搜索</button>
+        </form>
+      </div>
     </div>
   </nav>
 
