怎么卡片列表和修改导航

--- a/category.html
+++ b/category.html
@@ -41,14 +41,18 @@
 
   <!-- 上面是复用的头部 -->
 
-<div class="container mt-2" id="site-content">
-
   <!-- page-header start-->
-  <div class="page-header mt-5">
-    <h1>分类：产品运营</h1>
-    <p>这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊。</p>
+  <div class="jumbotron page-header">
+    <div class="container">
+      <h1>分类：产品运营</h1>
+      <hr>
+      <p>这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊。</p>
+    </div>
   </div>
   <!-- /page-header end -->
+
+
+<div class="container mt-2" id="site-content">
   <div class="row">
     <div class="col-8">
       <ul class="list-unstyled">
