--- a/archive.html
+++ b/archive.html
@@ -18,18 +18,12 @@
       <a class="navbar-brand" href="index.html">轻主题</a>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="category.html">分类</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="category2.html">图片列表</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="single.html">文章</a>
-          </li>
+          <li class="nav-item active"><a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a></li>
+          <li class="nav-item"><a class="nav-link" href="category.html">分类</a></li>
+          <li class="nav-item"><a class="nav-link" href="category2.html">图片列表</a></li>
+          <li class="nav-item"><a class="nav-link" href="category3.html">图文卡片</a></li>
+          <li class="nav-item"><a class="nav-link" href="category4.html">图文卡片2</a></li>
+          <li class="nav-item"><a class="nav-link" href="single.html">文章</a></li>
         </ul>
         <form class="form-inline my-2 my-lg-0 float-right">
           <input class="form-control mr-sm-2" type="text" placeholder="输入关键字">
@@ -41,6 +35,14 @@
 
   <!-- 上面是复用的头部 -->
 
+  <!-- page-header start-->
+  <div class="jumbotron page-header">
+    <div class="container">
+      <h1>分类：产品运营</h1>
+      <p>这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊。</p>
+    </div>
+  </div>
+  <!-- /page-header end -->
 
   <div class="container-fluid p-a" id="site-content">
 
