添加图片整理nav

--- a/category.html
+++ b/category.html
@@ -18,18 +18,18 @@
       <a class="navbar-brand" href="index.html">轻主题</a>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a>
+          <li class="nav-item active"><a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a></li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">分类列表</a>
+            <ul class="dropdown-menu" role="menu">
+              <li class="nav-item"><a class="nav-link" href="category.html">默认左右</a></li>
+              <li class="nav-item"><a class="nav-link" href="category2.html">图片标题列表</a></li>
+              <li class="nav-item"><a class="nav-link" href="category3.html">图文卡片</a></li>
+              <li class="nav-item"><a class="nav-link" href="category4.html">图文卡片2</a></li>
+              <li class="nav-item"><a class="nav-link" href="category5.html">图片</a></li>
+            </ul>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="category.html">分类</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="category2.html">图片列表</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="single.html">文章</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" href="single.html">文章</a></li>
         </ul>
         <form class="form-inline my-2 my-lg-0 float-right">
           <input class="form-control mr-sm-2" type="text" placeholder="输入关键字">
