--- a/category.html
+++ b/category.html
@@ -322,7 +322,7 @@
         </li>
       </ul>
     </div>
-    <div class="col-4 sidebar">
+    <div class="col-lg-4 sidebar">
       <div class="card">
         <div class="card-header">编辑推荐</div>
         <div class="card-block">
