--- a/category2.html
+++ b/category2.html
@@ -4,7 +4,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  <title>图文标题列表</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link href="assets/css/style.css" rel="stylesheet">
@@ -41,7 +41,7 @@
   <!-- page-header start-->
   <div class="jumbotron page-header">
     <div class="container">
-      <h1>分类：产品运营</h1>
+      <h1>分类：图文标题列表</h1>
       <hr>
       <p>这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊，这是一段描述啊。</p>
     </div>
