添加杂志首页

--- a/archive.html
+++ b/archive.html
@@ -8,6 +8,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 </head>
 <body>
   <nav class="navbar navbar-toggleable-md navbar-light">
@@ -22,11 +23,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">分类列表</a>
             <ul class="dropdown-menu" role="menu">
-              <li class="nav-item"><a class="nav-link" href="category.html">默认左右</a></li>
-              <li class="nav-item"><a class="nav-link" href="category2.html">图片标题列表</a></li>
-              <li class="nav-item"><a class="nav-link" href="category3.html">图文卡片</a></li>
-              <li class="nav-item"><a class="nav-link" href="category4.html">图文卡片2</a></li>
-              <li class="nav-item"><a class="nav-link" href="category5.html">图片</a></li>
+              <li class="nav-item"><a class="nav-link" href="category.html">文章列表-中图</a></li>
+              <li class="nav-item"><a class="nav-link" href="category4.html">文章列表-大图</a></li>
+              <li class="nav-item"><a class="nav-link" href="category3.html">文章列表-Masonry布局</a></li>
+              <li class="nav-item"><a class="nav-link" href="category2.html">相册-Masonry1</a></li>
+              <li class="nav-item"><a class="nav-link" href="category5.html">相册-Masonry2</a></li>
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link" href="single.html">文章</a></li>
