--- a/single.html
+++ b/single.html
@@ -18,15 +18,24 @@
       <a class="navbar-brand" href="index.html">轻主题</a>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active"><a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a></li>
+          <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">首页 <span class="sr-only">(current)</span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li class="nav-item"><a class="nav-link" href="index-2.html">首页 2</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-3.html">首页 3</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-4.html">首页 4</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-5.html">首页 5</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-6.html">首页 6</a></li>
+            </ul>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">分类列表</a>
             <ul class="dropdown-menu" role="menu">
-              <li class="nav-item"><a class="nav-link" href="category.html">默认左右</a></li>
-              <li class="nav-item"><a class="nav-link" href="category2.html">图片标题列表</a></li>
-              <li class="nav-item"><a class="nav-link" href="category3.html">图文卡片</a></li>
-              <li class="nav-item"><a class="nav-link" href="category4.html">图文卡片2</a></li>
-              <li class="nav-item"><a class="nav-link" href="category5.html">图片</a></li>
+              <li class="nav-item"><a class="nav-link" href="category.html">文章列表-中图</a></li>
+              <li class="nav-item"><a class="nav-link" href="category4.html">文章列表-大图</a></li>
+              <li class="nav-item"><a class="nav-link" href="category3.html">文章列表-Masonry布局</a></li>
+              <li class="nav-item"><a class="nav-link" href="category2.html">相册-Masonry1</a></li>
+              <li class="nav-item"><a class="nav-link" href="category5.html">相册-Masonry2</a></li>
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link" href="single.html">文章</a></li>
@@ -84,61 +93,75 @@
 
         <div class="related-posts">
           <h3 class="mb-3">你可能也喜欢：</h3>
-          <div class="card-decks">
-            <div class="card-deck">
+          <div class="row">
+
+            <div class="col-lg-4">
               <div class="card posts-card border-0">
                 <a href="single.html" title="日本公司缺远虑，中国公司缺近忧">
-                  <img src="assets/img/320x200p/320x200-p1.png" class="card-img-top img-fluid" alt="插画 ｜晁春彬">
+                  <img src="assets/img/320x200p/320x200-p1.png" class="card-img img-fluid">
                 </a>
                 <p class="card-title mt-2">
-                  <a href="single.html" rel="bookmark" title="日本公司缺远虑，中国公司缺近忧">日本公司缺远虑，中国公司缺近忧</a>
-                </p>
-              </div><!--./card-->
-              <div class="card posts-card border-0">
-                <a href="single.html" title="日本公司缺远虑，中国公司缺近忧">
-                  <img src="assets/img/320x200p/320x200-p2.png" class="card-img-top img-fluid" alt="插画 ｜晁春彬">
-                </a>
-                <p class="card-title mt-2">
-                  <a href="single.html" rel="bookmark" title="日本公司缺远虑，中国公司缺近忧">日本公司缺远虑，中国公司缺近忧日本公司缺远虑，中国公司缺近忧</a>
-                </p>
-              </div><!--./card-->
-              <div class="card posts-card border-0">
-                <a href="single.html" title="日本公司缺远虑，中国公司缺近忧">
-                  <img src="assets/img/320x200p/320x200-p3.png" class="card-img-top img-fluid" alt="插画 ｜晁春彬">
-                </a>
-                <p class="card-title mt-2">
-                  <a href="single.html" rel="bookmark" title="日本公司缺远虑，中国公司缺近忧">日本公司缺远虑，中国公司缺近忧日本公司缺远虑，中国公司缺近忧</a>
+                  <a href="single.html">日本公司缺远虑，中国公司缺近忧</a>
                 </p>
               </div><!--./card-->
             </div>
 
-            <div class="card-deck">
+            <div class="col-lg-4">
               <div class="card posts-card border-0">
                 <a href="single.html" title="日本公司缺远虑，中国公司缺近忧">
-                  <img src="assets/img/320x200p/320x200-p4.png" class="card-img-top img-fluid" alt="插画 ｜晁春彬">
+                  <img src="assets/img/320x200p/320x200-p2.png" class="card-img img-fluid">
                 </a>
                 <p class="card-title mt-2">
-                  <a href="single.html" rel="bookmark" title="日本公司缺远虑，中国公司缺近忧">日本公司缺远虑，中国公司缺近忧</a>
-                </p>
-              </div><!--./card-->
-              <div class="card posts-card border-0">
-                <a href="single.html" title="日本公司缺远虑，中国公司缺近忧">
-                  <img src="assets/img/320x200p/320x200-p5.png" class="card-img-top img-fluid" alt="插画 ｜晁春彬">
-                </a>
-                <p class="card-title mt-2">
-                  <a href="single.html" rel="bookmark" title="日本公司缺远虑，中国公司缺近忧">日本公司缺远虑，中国公司缺近忧日本公司缺远虑，中国公司缺近忧</a>
-                </p>
-              </div><!--./card-->
-              <div class="card posts-card border-0">
-                <a href="single.html" title="日本公司缺远虑，中国公司缺近忧">
-                  <img src="assets/img/320x200p/320x200-p6.png" class="card-img-top img-fluid" alt="插画 ｜晁春彬">
-                </a>
-                <p class="card-title mt-2">
-                  <a href="single.html" rel="bookmark" title="日本公司缺远虑，中国公司缺近忧">日本公司缺远虑，中国公司缺近忧</a>
+                  <a href="single.html">日本公司缺远虑，中国公司缺近忧日本公司缺远虑，中国公司缺近忧</a>
                 </p>
               </div><!--./card-->
             </div>
-          </div>
+
+            <div class="col-lg-4">
+              <div class="card posts-card border-0">
+                <a href="single.html" title="日本公司缺远虑，中国公司缺近忧">
+                  <img src="assets/img/320x200p/320x200-p3.png" class="card-img img-fluid">
+                </a>
+                <p class="card-title mt-2">
+                  <a href="single.html">日本公司缺远虑，中国公司缺近忧日本公司缺远虑，中国公司缺近忧</a>
+                </p>
+              </div><!--./card-->
+            </div>
+
+            <div class="col-lg-4">
+              <div class="card posts-card border-0">
+                <a href="single.html" title="日本公司缺远虑，中国公司缺近忧">
+                  <img src="assets/img/320x200p/320x200-p4.png" class="card-img img-fluid">
+                </a>
+                <p class="card-title mt-2">
+                  <a href="single.html">日本公司缺远虑，中国公司缺近忧</a>
+                </p>
+              </div><!--./card-->
+            </div>
+
+            <div class="col-lg-4">
+              <div class="card posts-card border-0">
+                <a href="single.html" title="日本公司缺远虑，中国公司缺近忧">
+                  <img src="assets/img/320x200p/320x200-p5.png" class="card-img img-fluid">
+                </a>
+                <p class="card-title mt-2">
+                  <a href="single.html">日本公司缺远虑，中国公司缺近忧日本公司缺远虑，中国公司缺近忧</a>
+                </p>
+              </div><!--./card-->
+            </div>
+
+            <div class="col-lg-4">
+              <div class="card posts-card border-0">
+                <a href="single.html" title="日本公司缺远虑，中国公司缺近忧">
+                  <img src="assets/img/320x200p/320x200-p6.png" class="card-img img-fluid">
+                </a>
+                <p class="card-title mt-2">
+                  <a href="single.html">日本公司缺远虑，中国公司缺近忧</a>
+                </p>
+              </div><!--./card-->
+            </div>
+
+          </div><!--./row-->
         </div>
 
 
