--- a/category5.html
+++ b/category5.html
@@ -8,6 +8,7 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 </head>
 <body>
   <nav class="navbar navbar-toggleable-md navbar-light">
@@ -18,7 +19,16 @@
       <a class="navbar-brand" href="index.html">轻主题</a>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active"><a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a></li>
+          <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">首页 <span class="sr-only">(current)</span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li class="nav-item"><a class="nav-link" href="index-2.html">首页 2</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-3.html">首页 3</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-4.html">首页 4</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-5.html">首页 5</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-6.html">首页 6</a></li>
+            </ul>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">分类列表</a>
             <ul class="dropdown-menu" role="menu">
