--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
 
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="assets/css/bootstrap.css">
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 </head>
-<body>
+<body class="home front-page">
   <nav class="navbar navbar-toggleable-md navbar-light">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -18,15 +19,24 @@
       <a class="navbar-brand" href="index.html">轻主题</a>
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active"><a class="nav-link" href="index.html">首页 <span class="sr-only">(current)</span></a></li>
+          <li class="nav-item dropdown active">
+            <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">首页 <span class="sr-only">(current)</span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li class="nav-item"><a class="nav-link" href="index-2.html">首页 2</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-3.html">首页 3</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-4.html">首页 4</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-5.html">首页 5</a></li>
+              <li class="nav-item"><a class="nav-link" href="index-6.html">首页 6</a></li>
+            </ul>
+          </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">分类列表</a>
             <ul class="dropdown-menu" role="menu">
-              <li class="nav-item"><a class="nav-link" href="category.html">默认左右</a></li>
-              <li class="nav-item"><a class="nav-link" href="category2.html">图片标题列表</a></li>
-              <li class="nav-item"><a class="nav-link" href="category3.html">图文卡片</a></li>
-              <li class="nav-item"><a class="nav-link" href="category4.html">图文卡片2</a></li>
-              <li class="nav-item"><a class="nav-link" href="category5.html">图片</a></li>
+              <li class="nav-item"><a class="nav-link" href="category.html">文章列表-中图</a></li>
+              <li class="nav-item"><a class="nav-link" href="category4.html">文章列表-大图</a></li>
+              <li class="nav-item"><a class="nav-link" href="category3.html">文章列表-Masonry布局</a></li>
+              <li class="nav-item"><a class="nav-link" href="category2.html">相册-Masonry1</a></li>
+              <li class="nav-item"><a class="nav-link" href="category5.html">相册-Masonry2</a></li>
             </ul>
           </li>
           <li class="nav-item"><a class="nav-link" href="single.html">文章</a></li>
@@ -35,39 +45,49 @@
           <input class="form-control mr-sm-2" type="text" placeholder="输入关键字">
           <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">搜索</button>
         </form>
+        <ul class="navbar-nav ml-5 pl-0">
+          <li class="nav-item mr-3"><a class="nav-link" href="login.html">登陆</a></li>
+          <li class="nav-item"><a class="nav-link" href="register.html">注册</a></li>
+        </ul>
       </div>
     </div>
   </nav>
 
-  <div class="marginauto">
     <!-- 上面是复用的头部 -->
-    <div id="myCarousel" class="carousel slide " data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="carousel-item active">
-          <img src="assets/img/banner/banner1.jpg" alt="First slide" class="img-fluid">
-        </div>
-        <div class="carousel-item">
-          <img src="assets/img/banner/banner2.jpg" alt="Second slide" class="img-fluid">
-        </div>
-        <div class="carousel-item">
-          <img src="assets/img/banner/banner3.jpg" alt="Third slide" class="img-fluid">
-        </div>
-      </div>
-      <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">上一个</span>
+
+
+<div id="myCarousel" class="carousel slide " data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <a href="#">
+        <img src="assets/img/banner/banner1.jpg" alt="First slide" class="img-fluid">
       </a>
-      <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">下一个</span>
+    </div>
+    <div class="carousel-item">
+      <a href="#">
+        <img src="assets/img/banner/banner2.jpg" alt="Second slide" class="img-fluid">
+      </a>
+    </div>
+    <div class="carousel-item">
+      <a href="#">
+        <img src="assets/img/banner/banner3.jpg" alt="Third slide" class="img-fluid">
       </a>
     </div>
   </div>
+  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">上一个</span>
+  </a>
+  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">下一个</span>
+  </a>
+</div>
 
 
 <div class="container mt-3" id="site-content">
@@ -327,6 +347,7 @@
       </div><!--./card-->
   </div>
 
+  <!--./ pagination start -->
   <div class="pagination mt-2">
     <nav aria-label="Page navigation">
       <ul class="pagination ">
@@ -338,7 +359,7 @@
         <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">最后一页</span><span class="sr-only">6</span></a></li>
       </ul>
     </nav>
-  </div>
+  </div> <!--./ pagination end -->
 
 
 </div>
