--- a/index-3.html
+++ b/index-3.html
@@ -101,6 +101,153 @@
 
   </div><!--./ carousel end -->
 
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 offset-md-3 text-center">
+        <h2 class="display-4">CTI-Cloud</h2>
+        <p>大型呼叫中心·集成化运营</p>
+        <p>提供呼叫中心核心软交换和CTI的开发、业务系统整合、通信资源整合、云平台运营等一揽子服务，让客户可以快速、安心、聚焦在自己的核心业务。</p>
+        <a href="single.html" class="btn btn-warning">了解更多</a>
+      </div>
+    </div>
+  </div>
+  <div id="cti-cloud-content">
+    <div class="container">
+			<div class="row">
+        <div class="col-lg-6 col-md-6 text-center">
+          <span>平台能力</span>
+          <div class="row">
+          	<div class="col-lg-4 col-md-4">
+          		<a href="/products/cti-cloud">
+          			<div>
+          				<h5>大容量系统</h5>
+          				<span>20000</span>
+          				<p>座席并发/单平台</p>
+          			</div>
+          		</a>
+          	</div>
+          	<div class="col-lg-4 col-md-4">
+          		<a href="/products/cti-cloud">
+          			<div class="border-white">
+          				<h5>高可用服务</h5>
+          				<span>99.78%</span>
+          				<p>整体可靠性</p>
+          				<p>系统+机房+网络+电路</p>
+          			</div>
+          		</a>
+          	</div>
+          	<div class="col-lg-4 col-md-4">
+          		<a href="/products/cti-cloud">
+          			<div class="border-white">
+          				<h5>高性能平台</h5>
+          				<span>300-500</span>
+          				<p>整体应用级别CAPS</p>
+          			</div>
+          		</a>
+          	</div>
+          </div>
+          <div class="row">
+          	<div class="col-lg-4 col-md-4">
+          		<a href="/products/cti-cloud">
+          			<div>
+          				<h5>业务弹性伸缩</h5>
+          				<p>按需调整座席</p>
+          				<p>按需调度通信资源</p>
+          			</div>
+          		</a>
+          	</div>
+          	<div class="col-lg-4 col-md-4">
+          		<a href="/products/cti-cloud">
+          			<div class="border-white">
+          				<h5>高度可定制</h5>
+          				<p>通过API开放能力</p>
+          				<p>支持代码级的高度可定制</p>
+          			</div>
+          		</a>
+          	</div>
+          	<div class="col-lg-4 col-md-4">
+          		<a href="/products/cti-cloud">
+          			<div class="border-white">
+          				<h5>部署快速灵活</h5>
+          				<p>快速上线、集中职场</p>
+          				<p>分布式职场、移动座席</p>
+          			</div>
+          		</a>
+          	</div>
+          </div>
+        </div>
+        <div class="col-lg-6 col-md-6 text-center">
+        <span>场景化应用</span>
+        <div class="row">
+        	<div class="col-lg-6 col-md-6">
+        		<a href="/products/cti-cloud">
+        			<div>
+        				<div class="row">
+        					<div class="col-lg-4 col-md-4">
+        						<i class="fa fa-user"></i>
+        					</div>
+        					<div class="col-lg-7 col-md-7">
+        						<h5>无限录音存储</h5>
+        						<p>人工智能的基础</p>
+        					</div>
+        				</div>
+        			</div>
+        		</a>
+        	</div>
+        	<div class="col-lg-6 col-md-6">
+        		<a href="/products/cti-cloud">
+        			<div>
+        				<div class="row">
+        					<div class="col-lg-4 col-md-4">
+        						<i class="fa fa-desktop"></i>
+        					</div>
+        					<div class="col-lg-7 col-md-7">
+        						<h5>智能质检（AI）</h5>
+        						<p>自动质检、全量质检</p>
+        						<p>通话占比、质量分析</p>
+        					</div>
+        				</div>
+        			</div>
+        		</a>
+        	</div>
+        </div>
+        <div class="row">
+        	<div class="col-lg-6 col-md-6">
+        		<a href="/products/cti-cloud">
+        		<div>
+        			<div class="row">
+        				<div class="col-lg-4 col-md-4">
+        					<img src="/images/apply_2.png">
+        				</div>
+        				<div class="col-lg-7 col-md-7">
+        					<h5>预测式外呼</h5>
+        					<p>独特的预测式算法，自动外呼，提高座席工时利用率</p>
+        				</div>
+        			</div>
+        		</div>
+        	</a></div><a href="/products/cti-cloud">
+        	</a><div class="col-lg-6 col-md-6"><a href="/products/cti-cloud">
+        		</a><a href="/products/cti-cloud">
+        		<div>
+        			<div class="row">
+        				<div class="col-lg-4 col-md-4">
+        					<img src="/images/apply_3.png">
+        				</div>
+        				<div class="col-lg-7 col-md-7" style="text-align: left;padding: 0px;">
+        					<h5>流式实时计算</h5>
+        					<p>自定义监控、实时统计、</p>
+        					<p>实时报表</p>
+        				</div>
+        			</div>
+        		</div>
+        		</a>
+        	</div>
+        </div>
+        </div>
+      </div>
+    </div>
+	</div>
+
 
   <!-- 复用的底部 -->
 
