--- a/index.html
+++ b/index.html
@@ -6,59 +6,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="assets/css/bootstrap.css">
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
-  <link rel="stylesheet" href="assets/css/index-3.css">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/index.css">
 </head>
 <body class="home front-page">
-  <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-    <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="container">
-      <a class="navbar-brand" href="index.html">轻主题</a>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item dropdown active">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">首页 <span class="sr-only">(current)</span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li class="nav-item"><a class="nav-link" href="index-2.html">首页 2</a></li>
-              <li class="nav-item"><a class="nav-link" href="index-3.html">首页 3</a></li>
-              <li class="nav-item"><a class="nav-link" href="index-4.html">首页 4</a></li>
-              <li class="nav-item"><a class="nav-link" href="index-5.html">首页 5</a></li>
-              <li class="nav-item"><a class="nav-link" href="index-6.html">首页 6</a></li>
-            </ul>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">分类列表</a>
-            <ul class="dropdown-menu" role="menu">
-              <li class="nav-item"><a class="nav-link" href="category.html">文章列表-中图</a></li>
-              <li class="nav-item"><a class="nav-link" href="category4.html">文章列表-大图</a></li>
-              <li class="nav-item"><a class="nav-link" href="category3.html">文章列表-Masonry布局</a></li>
-              <li class="nav-item"><a class="nav-link" href="category2.html">相册-Masonry1</a></li>
-              <li class="nav-item"><a class="nav-link" href="category5.html">相册-Masonry2</a></li>
-            </ul>
-          </li>
-          <li class="nav-item"><a class="nav-link" href="single.html">文章</a></li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0 float-right">
-          <input class="form-control mr-sm-2" type="text" placeholder="输入关键字">
-          <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">搜索</button>
-        </form>
-      </div>
-    </div>
-  </nav>
+
+
 
   <!-- 上面是复用的头部 -->
 
   <!--./ Carousel start  -->
   <div id="myCarousel" class="carousel slide mb-3" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
     <div class="carousel-inner" role="listbox">
       <div class="carousel-item active">
         <div class="container">
@@ -89,15 +49,6 @@
         </div>
       </div>
     </div>
-    <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">上一个</span>
-    </a>
-    <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">下一个</span>
-    </a>
-
 
   </div><!--./ carousel end -->
 
@@ -258,9 +209,8 @@
     </div>
   </footer>
 
-  <!-- jQuery first, then Tether, then Bootstrap JS. -->
+  <!-- jQuery first, then Bootstrap JS. -->
   <script src="assets/js/jquery.slim.min.js"></script>
-  <script src="assets/js/tether.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
 </body>
 </html>
