--- a/category.html
+++ b/category.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 </head>
 <body>
-  <nav class="navbar navbar-toggleable-md navbar-light">
+  <nav class="navbar navbar-expand-md navbar-light">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -352,12 +352,26 @@
         <h4 class="card-header">热门标签</h4>
         <div class="card-block">
           <div class="d_tags">
-            <a title="4个话题" href="http://qingzhuti.com/tag/%e5%a6%82%e4%bd%95%e5%86%99%e5%8d%9a%e5%ae%a2/" class="btn btn-info btn-sm">如何写博客</a>
-            <a title="2个话题" href="http://qingzhuti.com/tag/growth-hacker/" class="btn btn-warning btn-sm">增长黑客</a>
-            <a title="2个话题" href="http://qingzhuti.com/tag/wordpress-code-snippets/" class="btn btn-danger btn-sm">WordPress代码片段</a>
-            <a title="1个话题" href="http://qingzhuti.com/tag/profit-model/" class="btn btn-primary btn-sm">盈利模式</a>
-            <a title="1个话题" href="http://qingzhuti.com/tag/aaarr/" class="btn btn-secondary btn-sm">AAARR（海盗指标）</a>
-            <a title="1个话题" href="http://qingzhuti.com/tag/knowledge-hierarchy/" class="btn btn-success btn-sm">知识体系</a>
+            <a title="4个话题" href="tag.html" class="btn btn-info btn-sm">如何写博客</a>
+            <a title="2个话题" href="tag.html" class="btn btn-warning btn-sm">增长黑客</a>
+            <a title="2个话题" href="tag.html" class="btn btn-danger btn-sm">WordPress代码片段</a>
+            <a title="1个话题" href="tag.html" class="btn btn-primary btn-sm">盈利模式</a>
+            <a title="1个话题" href="tag.html" class="btn btn-success btn-sm">知识体系</a>
+            <a title="4个话题" href="tag.html" class="btn btn-info btn-sm">如何写博客</a>
+            <a title="2个话题" href="tag.html" class="btn btn-warning btn-sm">增长黑客</a>
+            <a title="2个话题" href="tag.html" class="btn btn-danger btn-sm">WordPress代码片段</a>
+            <a title="1个话题" href="tag.html" class="btn btn-primary btn-sm">盈利模式</a>
+            <a title="1个话题" href="tag.html" class="btn btn-success btn-sm">知识体系</a>
+            <a title="4个话题" href="tag.html" class="btn btn-info btn-sm">如何写博客</a>
+            <a title="2个话题" href="tag.html" class="btn btn-warning btn-sm">增长黑客</a>
+            <a title="2个话题" href="tag.html" class="btn btn-danger btn-sm">WordPress代码片段</a>
+            <a title="1个话题" href="tag.html" class="btn btn-primary btn-sm">盈利模式</a>
+            <a title="1个话题" href="tag.html" class="btn btn-success btn-sm">知识体系</a>
+            <a title="4个话题" href="tag.html" class="btn btn-info btn-sm">如何写博客</a>
+            <a title="2个话题" href="tag.html" class="btn btn-warning btn-sm">增长黑客</a>
+            <a title="2个话题" href="tag.html" class="btn btn-danger btn-sm">WordPress代码片段</a>
+            <a title="1个话题" href="tag.html" class="btn btn-primary btn-sm">盈利模式</a>
+            <a title="1个话题" href="tag.html" class="btn btn-success btn-sm">知识体系</a>
           </div>
         </div>
       </aside>
@@ -388,7 +402,7 @@
   </footer>
 
   <!-- jQuery first, then Tether, then Bootstrap JS. -->
-  <script src="assets/js/jquery.slim.min.js"></script>
+  <script src="assets/js/jquery.slim.min.js"></script><script src="assets/js/popper.min.js"></script>
   <script src="assets/js/tether.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
 </body>
