--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
 </head>
 <body class="home front-page">
-  <nav class="navbar navbar-toggleable-md navbar-light">
+  <nav class="navbar navbar-expand-md navbar-light">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -41,14 +41,12 @@
           </li>
           <li class="nav-item"><a class="nav-link" href="single.html">文章</a></li>
         </ul>
-        <form class="form-inline my-2 my-lg-0 float-right">
+        <form class="form-inline my-2 my-lg-0 mr-auto">
           <input class="form-control mr-sm-2" type="text" placeholder="输入关键字">
           <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">搜索</button>
         </form>
-        <ul class="navbar-nav ml-5 pl-0">
-          <li class="nav-item mr-3"><a class="nav-link" href="login.html">登陆</a></li>
-          <li class="nav-item"><a class="nav-link" href="register.html">注册</a></li>
-        </ul>
+        <a href="#" class="btn btn-warning navbar-btn mr-2">登陆</a>
+        <a class="btn btn-secondary navar-btn" href="register.html">注册</a>
       </div>
     </div>
   </nav>
@@ -375,7 +373,8 @@
   </footer>
 
   <!-- jQuery first, then Tether, then Bootstrap JS. -->
-  <script src="assets/js/jquery.slim.min.js"></script>
+  <script src="assets/js/jquery.slim.min.js"></script><script src="assets/js/popper.min.js"></script>
+  <script src="assets/js/popper.min.js"></script>
   <script src="assets/js/tether.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
 </body>
