--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
 </head>
 <body>
-  <nav class="navbar navbar-toggleable-md navbar-light">
+  <nav class="navbar navbar-expand-md navbar-light">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -91,7 +91,7 @@
   </footer>
 
   <!-- jQuery first, then Tether, then Bootstrap JS. -->
-  <script src="assets/js/jquery.slim.min.js"></script>
+  <script src="assets/js/jquery.slim.min.js"></script><script src="assets/js/popper.min.js"></script>
   <script src="assets/js/tether.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
 </body>
